<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray100"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/gray300" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            style="@style/AddressText"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_name"
            style="@style/AddressEdit"
            android:layout_toEndOf="@+id/tv_name" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_divider" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_phone"
            style="@style/AddressText"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/AddressEdit"
            android:layout_toEndOf="@+id/tv_phone"
            android:inputType="phone"
            android:maxLength="11" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_divider" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_area"
            style="@style/AddressText"
            android:text="@string/area" />

        <TextView
            android:id="@+id/tv_area1"
            style="@style/AddressText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_area"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/ic_right"
            android:paddingEnd="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_divider" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_address"
            style="@style/AddressText"
            android:text="@string/address" />

        <EditText
            android:id="@+id/et_address"
            style="@style/AddressEdit"
            android:layout_toEndOf="@+id/tv_address"
            android:maxLength="30"
            android:minLines="2" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_divider" />

    <CheckBox
        android:id="@+id/cb_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="10dp"
        android:text="保存到地址簿" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_blue"
        android:text="完成"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen12" />
</LinearLayout>